<resources>
    <string name="app_name">memberId</string>
    <string name="title_activity_feed_page">FeedPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="cards">Cards</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="filter">Filter</string>
    <string name="itemtype">itemtype</string>
    <string name="poin">poin</string>
    <string name="close">Close</string>
    <string name="others">Others</string>
    <string name="products">Products</string>
    <string name="vouchers">Vouchers</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all_filter">Clear All Filter</string>
    <string name="poin_needed">Poin Needed</string>
    <string name="_10_000">10.000</string>
    <string name="awards_type">Awards Type</string>
    <string name="all_type">All Type</string>
    <string name="enter_your_email_address_to_sign_in_and_continue">Enter your email address to sign in and continue
    </string>
    <string name="award">award</string>
    <string name="star">star</string>
    <string name="email_address">Email Address</string>
    <string name="sign_in">Sign In</string>
    <string name="awards">Awards</string>
    <string name="awards_menu">Awards Menu</string>
    <string name="images">images</string>
    <string name="not_registered_email">your email is not registered</string>
</resources>
