<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                app:cardMaxElevation="2dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                app:cardBackgroundColor="#DCDCDC" android:id="@+id/cardView2">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView3" app:layout_constraintBottom_toBottomOf="@+id/poin_needed"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:contentDescription="@string/images"
                />
                <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.96"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                        app:cardBackgroundColor="#039BE5" app:cardCornerRadius="5dp"
                        android:id="@+id/card_view_item_type">
                    <TextView
                            android:text="@string/itemtype"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/item_type_name"
                            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:textColor="#FFFFFF"
                            android:layout_marginBottom="4dp"/>
                </androidx.cardview.widget.CardView>
                <TextView
                        android:text="@string/poin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/poin_needed"
                        app:layout_constraintTop_toBottomOf="@+id/card_view_item_type"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="64dp"
                        android:textSize="16sp" android:textStyle="bold" app:layout_constraintVertical_bias="0.0"
                        android:layout_marginBottom="8dp" android:background="#DCDCDC"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
        <TextView
                android:text="@android:string/unknownName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/award_name" android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.0" android:textSize="18sp"
                android:textStyle="bold" android:textColor="#000000"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>